--- a/Mappy/Mappy/Base.lproj/Main.storyboard
+++ b/Mappy/Mappy/Base.lproj/Main.storyboard
@@ -186,22 +186,22 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X7k-3w-LE7">
-                                <rect key="frame" x="91" y="328" width="232" height="34"/>
+                                <rect key="frame" x="91" y="328" width="232" height="34.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uUH-sh-TEl">
-                                <rect key="frame" x="167" y="430.5" width="81" height="20.5"/>
+                                <rect key="frame" x="167" y="431" width="81" height="20"/>
                                 <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TBz-MI-K7y">
+                            <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TBz-MI-K7y">
                                 <rect key="frame" x="91" y="459" width="232" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WGj-KO-NFx">
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WGj-KO-NFx">
                                 <rect key="frame" x="146" y="597" width="123" height="30"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Log in">
@@ -226,6 +226,14 @@
                                 <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DR9-5B-l1h">
+                                <rect key="frame" x="353" y="21" width="40" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="GoBackHome:" destination="5V6-wL-2m7" eventType="touchUpInside" id="BFH-BL-vve"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -236,6 +244,8 @@
                             <constraint firstItem="kEE-cp-oO5" firstAttribute="trailing" secondItem="wgW-16-lvK" secondAttribute="trailing" constant="176" id="BLe-aA-Nvw"/>
                             <constraint firstItem="WGj-KO-NFx" firstAttribute="top" secondItem="TBz-MI-K7y" secondAttribute="bottom" constant="104" id="Hqt-p5-0JO"/>
                             <constraint firstItem="kEE-cp-oO5" firstAttribute="trailing" secondItem="Zmf-F5-WWJ" secondAttribute="trailing" constant="133" id="JFX-WP-bG5"/>
+                            <constraint firstItem="kEE-cp-oO5" firstAttribute="bottom" secondItem="DR9-5B-l1h" secondAttribute="bottom" constant="753" id="JHR-I6-TnK"/>
+                            <constraint firstItem="kEE-cp-oO5" firstAttribute="trailing" secondItem="DR9-5B-l1h" secondAttribute="trailing" constant="21" id="Jjo-Vx-sZI"/>
                             <constraint firstItem="kEE-cp-oO5" firstAttribute="trailing" secondItem="TBz-MI-K7y" secondAttribute="trailing" constant="91" id="KjD-TH-qPX"/>
                             <constraint firstItem="kEE-cp-oO5" firstAttribute="bottom" secondItem="Zmf-F5-WWJ" secondAttribute="bottom" constant="91" id="Lml-LS-TVe"/>
                             <constraint firstItem="wgW-16-lvK" firstAttribute="leading" secondItem="kEE-cp-oO5" secondAttribute="leading" constant="177" id="Qwh-mB-FVn"/>
@@ -245,6 +255,8 @@
                             <constraint firstItem="kEE-cp-oO5" firstAttribute="trailing" secondItem="u24-Ls-tof" secondAttribute="trailing" constant="124" id="VNq-Bk-gfm"/>
                             <constraint firstItem="wgW-16-lvK" firstAttribute="top" secondItem="OXT-sf-8rU" secondAttribute="bottom" constant="81.5" id="Ve3-fL-Qby"/>
                             <constraint firstItem="kEE-cp-oO5" firstAttribute="trailing" secondItem="WGj-KO-NFx" secondAttribute="trailing" constant="145" id="Wu9-Bk-9oZ"/>
+                            <constraint firstItem="DR9-5B-l1h" firstAttribute="top" secondItem="kEE-cp-oO5" secondAttribute="top" constant="21" id="XdN-QE-LAO"/>
+                            <constraint firstItem="DR9-5B-l1h" firstAttribute="leading" secondItem="kEE-cp-oO5" secondAttribute="leading" constant="353" id="bUh-SI-vGw"/>
                             <constraint firstItem="X7k-3w-LE7" firstAttribute="leading" secondItem="kEE-cp-oO5" secondAttribute="leading" constant="91" id="bic-V5-Xy3"/>
                             <constraint firstItem="u24-Ls-tof" firstAttribute="top" secondItem="kEE-cp-oO5" secondAttribute="top" constant="134" id="cjy-3g-hSC"/>
                             <constraint firstItem="Zmf-F5-WWJ" firstAttribute="top" secondItem="WGj-KO-NFx" secondAttribute="bottom" constant="69" id="dOl-oL-btb"/>
@@ -284,24 +296,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o4m-hL-zvA">
-                                <rect key="frame" x="50" y="613" width="123" height="52"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Log in">
-                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="25"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <segue destination="5V6-wL-2m7" kind="show" id="jVR-DE-K1S"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hk2-rI-qPL">
-                                <rect key="frame" x="247" y="613" width="123" height="52"/>
+                                <rect key="frame" x="85" y="491" width="245" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Sign up">
@@ -316,13 +312,21 @@
                                     <segue destination="7Mc-Yi-bN3" kind="show" id="NbN-IO-sl9"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="15U-9e-XZ8">
-                                <rect key="frame" x="104" y="362" width="207" height="52"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o4m-hL-zvA">
+                                <rect key="frame" x="85" y="400" width="245" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Get started">
+                                <state key="normal" title="Log in">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="5V6-wL-2m7" kind="show" id="jVR-DE-K1S"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
