--- a/Mappy/Mappy/Base.lproj/Main.storyboard
+++ b/Mappy/Mappy/Base.lproj/Main.storyboard
@@ -288,11 +288,14 @@
         <!--Home-->
         <scene sceneID="8gL-eK-KdS">
             <objects>
-                <viewController id="GyR-WV-eGy" userLabel="Home" sceneMemberID="viewController">
+                <viewController id="GyR-WV-eGy" userLabel="Home" customClass="HomeViewController" customModule="Mappy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0Qy-hI-CHx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fGi-ef-ouP">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mappy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DT7-KR-seP">
                                 <rect key="frame" x="124" y="122" width="166" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -334,8 +337,17 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="fGi-ef-ouP" firstAttribute="leading" secondItem="0Qy-hI-CHx" secondAttribute="leading" id="08S-1V-4Jd"/>
+                            <constraint firstAttribute="bottom" secondItem="fGi-ef-ouP" secondAttribute="bottom" id="HDr-VA-S9c"/>
+                            <constraint firstAttribute="trailing" secondItem="fGi-ef-ouP" secondAttribute="trailing" id="SVl-T5-fxd"/>
+                            <constraint firstItem="fGi-ef-ouP" firstAttribute="top" secondItem="0Qy-hI-CHx" secondAttribute="top" id="z6R-uY-Ely"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="igI-Vk-kWj"/>
                     </view>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="fGi-ef-ouP" id="pbt-Fd-M2J"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AT7-QW-Aid" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -781,7 +793,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="kyq-no-uXi"/>
-        <segue reference="d37-Pb-3Dv"/>
+        <segue reference="jHy-Qb-HSK"/>
         <segue reference="5xz-b1-yF6"/>
     </inferredMetricsTieBreakers>
 </document>
